--- a/error/error.html
+++ b/error/error.html
@@ -14,7 +14,7 @@
 
         h1 {
             font-size: 48px;
-            color: #ff4081;
+            color: #136728;
             margin-bottom: 20px;
         }
 
@@ -23,12 +23,12 @@
         }
 
         .error-img {
-            width: 500px;
+            width: 700px;
             height: auto;
             display: block;
             margin: 0 auto;
-            border-radius: 10px;
-            box-shadow: 0 0 20px rgba(255, 64, 129, 0.5);
+            border-radius: 100px;
+            box-shadow: 0 0 20px rgba(15, 142, 30, 0.5);
         }
 
         .error-caption {
