--- a/error/page.html
+++ b/error/page.html
@@ -36,7 +36,7 @@
 <body>
     <h1>Error 500</h1>
     <p>Oops! Looks like the page you're looking for is missing.</p>
-    <img class="error-img" src="Hooray.jpeg" alt="error">
+    <img class="error-img" src="../Hooray.jpeg" alt="error">
     <p class="error-caption">Lost in cyberspace...</p>
 </body>
 </html>
