--- a/sock2/page.html
+++ b/sock2/page.html
@@ -36,7 +36,7 @@
 <body>
     <h1>Error 200</h1>
     <p></p>
-    <img class="error-img" src="/Hooray.jpeg" alt="error">
+    <img class="error-img" src="/waiting.jpeg" alt="error">
     <p class="error-caption">Lost in cyberspace...</p>
 </body>
 </html>
