--- a/sock2/page.html
+++ b/sock2/page.html
@@ -34,9 +34,9 @@
     </style>
 </head>
 <body>
-    <h1>Error 404</h1>
-    <p>Not Found</p>
-    <img class="error-img" src="waiting.png" alt="error">
+    <h1>Error 200</h1>
+    <p></p>
+    <img class="error-img" src="/errorimg.png" alt="error">
     <p class="error-caption">Lost in cyberspace...</p>
 </body>
 </html>
