--- a/sock2/page.html
+++ b/sock2/page.html
@@ -8,8 +8,8 @@
             color: #fff;
             text-align: center;
             font-family: "Arial", sans-serif;
-            font-size: 18px;
-            padding-top: 50px;
+            font-size: 30px;
+            padding-top: 500px;
         }
         h1 {
             font-size: 48px;
@@ -19,14 +19,6 @@
         p {
             margin-bottom: 30px;
         }
-        .error-img {
-            width: 700px;
-            height: auto;
-            display: block;
-            margin: 0 auto;
-            border-radius: 100px;
-            box-shadow: 0 0 20px rgba(255, 64, 129, 0.5);
-        }
         .error-caption {
             font-style: italic;
             color: #ff4081;
@@ -34,9 +26,8 @@
     </style>
 </head>
 <body>
-    <h1>Error 200</h1>
-    <p></p>
-    <img class="error-img" src="/errorimg.png" alt="error">
+    <h1>Error 404</h1>
+    <p>Not Found</p>
     <p class="error-caption">Lost in cyberspace...</p>
 </body>
 </html>
