--- a/index.html
+++ b/index.html
@@ -1,19 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Welcome</title>
     <style>
         body {
             background-color: black;
-            color : white;
+            color: #fff;
+            text-align: center;
+            font-family: "Arial", sans-serif;
+            font-size: 30px;
+            padding-top: 300px;
         }
-    </style>
+        h1 {
+            font-size: 48px;
+            color: #167263;
+            margin-bottom: 20px;
+        }
+        p {
+            margin-bottom: 30px;
+        }
+        .error-img {
+            width: 700px;
+            height: auto;
+            display: block;
+            margin: 0 auto;
+            border-radius: 100px;
+            box-shadow: 0 0 20px rgba(34, 144, 141, 0.5);
+        }
+        .error-caption {
+            font-style: italic;
+            color: #167263;
+        }
+    </style
 </head>
 <body>
     <h1>Welcome to Our Website!</h1>
     <p>This is the default index page.</p>
+    <img class="error-img" src="/Hooray.jpeg" alt="error">
+    <p class="error-caption">Have fun...</p>
 </body>
 </html>
-
