--- a/sock2/page.html
+++ b/sock2/page.html
@@ -26,8 +26,8 @@
     </style>
 </head>
 <body>
-    <h1>Error 404</h1>
-    <p>Not Found</p>
+    <h1>Error 403</h1>
+    <p>Forbidden</p>
     <p class="error-caption">Lost in cyberspace...</p>
 </body>
 </html>
