--- a/upload/Body.html
+++ b/upload/Body.html
@@ -1,4 +1,4 @@
-<form method="post" action="Users/sel-jama/Desktop/Webserv/cgi/test.py">
+<form method="post" action="../cgi/test.py">
   <label for="search_term">Search Term:</label>
   <input type="text" name="search_term" id="search_term">
   <button type="submit">Search</button>
