--- a/index.html
+++ b/index.html
@@ -1,18 +1,3 @@
-<!DOCTYPE html>
 <html>
-<head>
-    <title>Sign in to intra 42 </title>
-</head>
-<style>
-    h2 {
-        color: green;
-    }
-</style>
-<body>
-    <h2>Sign in to intra 42</h2> 
-    <form action="script.php" method="post">
-        <input type="text" name="username" placeholder="Username"> <br> <!-- Modified to include a placeholder -->
-        <input type="submit" name="Submit"> 
-    </form>
-</body>
+	<h1>Hi</html>
 </html>
