--- a/myroot/index.html
+++ b/myroot/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
-    <style>
-        body {
-            background-color: black;
-            color : white;
-        }
-    </style>
+    <title>Sign in to intra 42 </title>
 </head>
+<style>
+    h2 {
+        color: green;
+    }
+</style>
 <body>
-    <h1>Welcome to Our Website!</h1>
-    <p>This is the default index page.</p>
+    <h2>Sign in to intra 42</h2> 
+    <form action="script.php" method="post">
+        <input type="text" name="username" placeholder="Username"> <br> <!-- Modified to include a placeholder -->
+        <input type="submit" name="Submit"> 
+    </form>
 </body>
 </html>
-
